[tool.poetry]
name = "edit_pydantic"
version = "0.1.0"
description = ""
authors = ["elda27 <kaz.birdstick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {path='./pydantic', develop=true}
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
